# niji

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini
assets/: lights.json
assets/environments/footprint_court/: diffuse.sh9
assets/environments/footprint_court/diffuse/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
assets/environments/footprint_court/specular/mip0/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
assets/environments/footprint_court/specular/mip1/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
assets/environments/footprint_court/specular/mip2/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
assets/environments/footprint_court/specular/mip3/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
assets/environments/footprint_court/specular/mip4/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
assets/environments/footprint_court/specular/mip5/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
assets/environments/footprint_court/specular/mip6/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
lib/: CMakeLists.txt
lib/glfw/: glfw3.lib
lib/glm/: .gitignore
lib/vma/: vk_mem_alloc.h
shaders/: compile.bat  depth_pass.slang  forward_pass.slang  frag.spv  grid_frustums_cs.slang  light_culling_cs.slang  line_render_pass.slang  shader.frag  shader.vert  skybox_pass.slang  vert.spv
shaders/spirv/: depth_pass.frag.spv  depth_pass.vert.spv  forward_pass.frag.spv  forward_pass.vert.spv  grid_frustums_cs.spv  light_culling_cs.spv  line_render_pass.frag.spv  line_render_pass.vert.spv  skybox_pass.frag.spv  skybox_pass.vert.spv
src/: main.cpp  precomp.hpp
src/app/: app.cpp  app.hpp  camera_system.cpp  camera_system.hpp
src/core/: context.cpp  context.hpp
src/engine/: engine.cpp  engine.hpp
src/engine/core/: commandlist.cpp  commandlist.hpp  common.cpp  common.hpp  context.cpp  context.hpp  descriptor.cpp  descriptor.hpp  ecs.cpp  ecs.hpp  envmap.cpp  envmap.hpp  logger.cpp  logger.hpp  vulkan-functions.cpp  vulkan-functions.hpp
src/engine/core/components/: render-components.hpp  transform.cpp  transform.hpp
src/engine/core/editor/: editor.cpp  editor.hpp
src/engine/core/rendering/: renderer.cpp  renderer.hpp
src/engine/rendering/: material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  render-passes.cpp  render-passes.hpp  renderer.cpp  renderer.hpp  swapcahin.cpp  swapchain.hpp
src/engine/rendering/model/: material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  tangent_space_wrapper.cpp  tangent_space_wrapper.hpp
src/engine/rendering/passes/: depth_pass.cpp  depth_pass.hpp  forward_pass.cpp  forward_pass.hpp  imgui_pass.cpp  imgui_pass.hpp  light_culling.cpp  light_culling.hpp  line_render_pass.cpp  line_render_pass.hpp  render_pass.cpp  render_pass.hpp  skybox_pass.cpp  skybox_pass.hpp
src/rendering/: renderer.cpp  renderer.hpp
